tests/archived/snapshots/token:authorization_details:state.snap
---
source: tests/token.rs
assertion_line: 228
expression: state
---
subject_id: normal_user
stage:
  validated:
    access_token: "[access_token]"
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
    credentials:
      PHLEmployeeID:
        credential_identifier: PHLEmployeeID
        credential_configuration_id: EmployeeID_W3C_VC
expires_at: "[expires_at]"
